# singularity-sdk

./: .gitignore  Cargo.toml  READ.md  README.md  bitmap_inscriptions.txt  main.rs
examples/: bitmaps_usage.rs  usage.rs
outixs/: Cargo.toml
src/: lib.rs  lib.rscargo clean  main.rs  workflow_engine.rs
src/agents/: bitmap_agent.rs  bitmap_agent.rs:  bitmap_relay_agent.rs  mod.rs  ordinal_agent.rs  utxo_agent.rs
src/anchor/: mod.rs
src/bitmaps/: parser.rs
src/compression/: mod.rs
src/ech/: mod.rs  orchestrator.rs
src/freedom_mesh/: freedom_mesh.rs  mod.rs
src/nostr/: mod.rs  nostr_listener.rs  relay.rs
src/plugins/: plugin.rs
src/transaction/: mod.rs  processor.rs  structures.rs
src/utils/: bitmap_utils.rs  merkle_tree.rs  mod.rs
src/utxo/: fetch.rs  mod.rs  storage.rs
src/verification/: mod.rs
tests/: bitmap_agent_tests.rs  bitmap_relay_agent_tests.rs  multi_agent_tests.rs  nostr_tests.rs  test_nostr.rs  test_transaction.rs  test_utxo.rs  test_verification.rs  utxo_tests.rs  verification_tests.rs
web/: freedom_mesh.html  index.html  luckchain.html  playconomy.html  social_universes.html
web/static/: script.js  style.css
