[package]
name = "outixs"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
rusqlite = "0.29.0"
bitcoin = "0.30"
bitcoincore-rpc = "0.13"

tokio = { version = "1", features = ["full"] }

[dev-dependencies]
mockito = "0.31.0"

[features]
nostr = []

