[package]
name = "outixs"
version = "0.1.0"
edition = "2021"
description = "Outixs SDK: Bridging UTXOs, Nostr, and Bitmaps"
license = "MIT"
repository = "https://github.com/your-repo/outixs"
authors = ["Your Name <your.email@example.com>"]

# Documentation and build metadata
readme = "README.md"
keywords = ["bitcoin", "nostr", "utxo", "sdk", "merkle-tree"]
categories = ["cryptography", "blockchain", "network-programming"]

[lib]
name = "outixs"
path = "src/lib.rs"

[[bin]]
name = "outixs"
path = "src/main.rs"

[dependencies]
# Serialization and JSON processing
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client for interacting with APIs
reqwest = { version = "0.11", features = ["blocking", "json"] }

# Database for lightweight local storage
rusqlite = "0.29.0"

# Bitcoin-related libraries
bitcoin = "0.30"
bitcoincore-rpc = "0.13"

# Utility for globally shared mutable state
lazy_static = "1.4"

# Asynchronous programming support
tokio = { version = "1", features = ["full"] }

# WebSocket client for Nostr
tungstenite = "0.17"
url = "2.2"

# Hashing and cryptographic utilities
sha2 = "0.10"
digest = "0.10"

[dev-dependencies]
# Mocking HTTP requests for testing
mockito = "0.31.0"

# Test assertion and snapshot libraries
assert-json-diff = "2.0"
similar = "2.6"

[features]
# Enable Nostr-specific features
nostr = []

# Optional feature flags for advanced use cases
advanced-merkle = []
plugin-support = []

[profile.release]
# Optimize for faster execution and smaller binary size
lto = "fat"
codegen-units = 1
panic = "abort"

